--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -101,7 +101,7 @@
         </div>
     
         <button type="submit" 
-          class="btn btn-success btn-sm"
+          class="btn btn-primary btn-lg btn-block"
             [disabled]="f.invalid">Add</button>
       </form>
     </div>
