--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
           <input type="number"
                 class="form-control"
                 name="boarded"
-                [(ngModel)]="log.boarded" name="logBoarded"
+                [(ngModel)]="log.boarded"
                 #logBoarded="ngModel"
                 pattern="^[0-9]+$"
                 required>
@@ -24,7 +24,7 @@
           <input type="text"
                 class="form-control"
                 name="stop"
-                [(ngModel)]="log.stop" name = "logStop"
+                [(ngModel)]="log.stop"
                 #logStop="ngModel"
                 pattern="^[a-zA-Z]+$"
                 required>
@@ -73,7 +73,7 @@
           <input type="text"
                 class="form-control"
                 name="loop"
-                [(ngModel)]="log.loop" name = "logLoop"
+                [(ngModel)]="log.loop"
                 #logLoop="ngModel"
                 required
                 pattern="^[a-zA-Z]+$">
@@ -90,7 +90,7 @@
           <input type="text"
                 class="form-control"
                 name="driver"
-                [(ngModel)]="log.driver" name = "logDriver"
+                [(ngModel)]="log.driver"
                 #logDriver="ngModel"
                 required
                 pattern="^[a-zA-Z]+$">
