Add tests for service and component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+    <title>BusLog</title>
     <div id="theForm">
       <h2>Bus Form</h2>
       <form #f="ngForm" name="theForm" (ngSubmit)="addLog(f)">
