--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,54 +1,93 @@
-    <title>BusLog</title>
-    <div id="theForm">
-      <h2>Bus Form</h2>
-      <form #f="ngForm" name="theForm" (ngSubmit)="addLog(f)">
-        <div class="form-group">
-          <label>Boarded</label>
-          
-        <div class="row">
-          <div class="col">
-          <input type="number"
-                class="form-control"
-                name="boarded"
-                [(ngModel)]="log.boarded"
-                #logBoarded="ngModel"
-                pattern="^[0-9]+$"
-                required> 
-              </div>
-              <div class ="col">
-                
-                  <button type="button" class="btn btn-danger btn-number"
-                  (click)="increaseBoardedValueClicked()">+</button>
-                  
-                </div>   
-              </div>
-          <span class="help-block danger" *ngIf="logBoarded.errors?.required && logBoarded.touched">
-            The # of boarded is required
-          </span>
-          <span class="help-block danger" *ngIf="logBoarded.errors?.pattern && logBoarded.touched">
-            The # of boaurded can only contain numbers
-          </span>
-          
+<nav class="navbar navbar-dark bg-dark mb-5">
+    <a class="navbar-brand" href="/">Log Collection System</a>
+    <div class="navbar-expand mr-auto">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Home</a>
+        <a class="nav-item nav-link" href="#">About</a>
+        <a class="nav-item nav-link" href="#">Contact</a>
+      </div>
+    </div>
+    <div class="navbar-expand ml-auto navbar-nav">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="https://github.com/beeman" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+        <a class="nav-item nav-link" href="https://twitter.com/beeman_nl" target="_blank">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a class="nav-item nav-link" href="https://medium.com/@beeman" target="_blank">
+          <i class="fa fa-medium"></i>
+        </a>
+      </div>
+    </div>
+  </nav>
+
+
+
+<div id="theForm">
+  <h2>Bus Form</h2>
+
+  <form #f="ngForm" name="theForm" (ngSubmit)="submitLog(f)" class="text-center border border-light p-5">
+
+    <div class="form-group">
+      <label>Boarded</label>
+      <div class="center-block">
+      <div class="md-form input-group">
+        <div class="input-group-prepend">
+          <button type="button" class="btn btn-primary btn-number btn-lg btn-block" (click)="decreaseBoardedValueClicked()">Decrease</button>
         </div>
 
-        <div class="form-group">
-          <label>Stop</label>
-          <input type="text"
-                class="form-control"
-                name="stop"
-                [(ngModel)]="log.stop"
-                #logStop="ngModel"
-                pattern="^[a-zA-Z]+$"
-                required>
-          <span class="help-block danger" *ngIf="logStop.errors?.required && logStop.touched">
-            The stop name is required
-          </span>
-          <span class="help-block danger" *ngIf="logStop.errors?.pattern && logStop.touched">
-            The stop name can only contain the letters a-z or A-Z
-          </span>
-        </div>
+        <input type="number" class="input-group-text md-addon" name="boarded" min="0" [(ngModel)]="log.boarded" #logBoarded="ngModel"
+          pattern="^[0-9]+$" required>
 
-        <!-- <div class="form-group">
+        <div class="input-group-append">
+          <button type="button" class="btn btn-primary btn-number btn-lg btn-block" (click)="increaseBoardedValueClicked()">Increase</button>
+        </div>
+      </div>
+    </div>
+
+      <span class="help-block danger" *ngIf="logBoarded.errors?.required && logBoarded.touched">
+        The # of boarded is required
+      </span>
+      <span class="help-block danger" *ngIf="logBoarded.errors?.pattern && logBoarded.touched">
+        The # of boarded can only contain positive numbers.
+      </span>
+
+    </div>
+
+
+
+
+    <div class="form-group">
+        <label>Stop</label>
+        
+        <select [(ngModel)]="log.stop" name="stop" class="form-control">
+          <option *ngFor="let test of testDropdown;" [ngValue]="test">{{test}}</option>
+        </select>
+<!-- 
+        <span class="help-block danger" *ngIf="logStop.errors?.required && logStop.touched">
+          The stop name is required
+        </span>
+        <span class="help-block danger" *ngIf="logStop.errors?.pattern && logStop.touched">
+          The stop name can only contain the letters a-z or A-Z
+        </span> -->
+      </div>
+
+
+
+    <!-- <div class="form-group">
+      <label>Stop</label>
+      <input type="text" class="form-control" name="stop" [(ngModel)]="log.stop" #logStop="ngModel" pattern="^[a-zA-Z]+$"
+        required>
+      <span class="help-block danger" *ngIf="logStop.errors?.required && logStop.touched">
+        The stop name is required
+      </span>
+      <span class="help-block danger" *ngIf="logStop.errors?.pattern && logStop.touched">
+        The stop name can only contain the letters a-z or A-Z
+      </span>
+    </div> -->
+
+    <!-- <div class="form-group">
           <label>timestap</label>
           <input type="datetime-local"
                 class="form-control"
@@ -80,42 +119,29 @@
           </span>
         </div> -->
 
-        <div class="form-group">
-          <label>Loop</label>
-          <input type="text"
-                class="form-control"
-                name="loop"
-                [(ngModel)]="log.loop"
-                #logLoop="ngModel"
-                required
-                pattern="^[a-zA-Z]+$">
-          <span class="help-block danger" *ngIf="logLoop.errors?.required && logLoop.touched">
-            The loop name is required.
-          </span>
-          <span class="help-block danger" *ngIf="logLoop.errors?.pattern && logLoop.touched">
-            The loop name can only contain the letters a-z or A-Z
-          </span>
-        </div>
-
-        <div class="form-group">
-          <label>Driver</label>
-          <input type="text"
-                class="form-control"
-                name="driver"
-                [(ngModel)]="log.driver"
-                #logDriver="ngModel"
-                required
-                pattern="^[a-zA-Z]+$">
-          <span class="help-block danger" *ngIf="logDriver.errors?.required && logDriver.touched">
-            The driver name is required
-          </span>
-          <span class="help-block danger" *ngIf="logDriver.errors?.pattern && logDriver.touched">
-            The driver name can only contain the letters a-z or A-Z
-          </span>
-        </div>
-    
-        <button type="submit" 
-          class="btn btn-primary btn-lg btn-block"
-            [disabled]="f.invalid">Add</button>
-      </form>
+    <div class="form-group">
+      <label>Loop</label>
+      <input type="text" class="form-control" name="loop" [(ngModel)]="log.loop" #logLoop="ngModel" required pattern="^[a-zA-Z]+$">
+      <span class="help-block danger" *ngIf="logLoop.errors?.required && logLoop.touched">
+        The loop name is required.
+      </span>
+      <span class="help-block danger" *ngIf="logLoop.errors?.pattern && logLoop.touched">
+        The loop name can only contain the letters a-z or A-Z
+      </span>
     </div>
+
+    <div class="form-group">
+      <label>Driver</label>
+      <input type="text" class="form-control" name="driver" [(ngModel)]="log.driver" #logDriver="ngModel" required
+        pattern="^[a-zA-Z]+$">
+      <span class="help-block danger" *ngIf="logDriver.errors?.required && logDriver.touched">
+        The driver name is required
+      </span>
+      <span class="help-block danger" *ngIf="logDriver.errors?.pattern && logDriver.touched">
+        The driver name can only contain the letters a-z or A-Z
+      </span>
+    </div>
+
+    <button type="submit" class="btn btn-success btn-lg btn-block" [disabled]="f.invalid">Add</button>
+  </form>
+</div>
