--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,8 +36,8 @@
           <button type="button" class="btn btn-dark btn-number btn-lg btn-block" (click)="decreaseBoardedValueClicked()">-</button>
         </div>
         <div class="col-sm-2">
-          <input type="number" class="form-control form-control-lg input-group-text" name="boarded" min="0" [(ngModel)]="log.boarded"
-            #logBoarded="ngModel" pattern="^[0-9]+$" required>
+          <input type="number" pattern="[0-9]*" inputmode="numeric" class="form-control form-control-lg input-group-text" name="boarded" min="0" [(ngModel)]="log.boarded"
+            #logBoarded="ngModel" required>
         </div>
         <div class="col-sm-5">
           <button type="button" class="btn btn-success btn-number btn-lg btn-block" (click)="increaseBoardedValueClicked()">+</button>
@@ -59,8 +59,8 @@
           <button type="button" class="btn btn-dark btn-number btn-lg btn-block" (click)="decreaseLeftBehindValueClicked()">-</button>
         </div>
         <div class="col-sm-2">
-          <input type="number" class="form-control form-control-lg input-group-text" name="leftBehind" min="0"
-            [(ngModel)]="log.leftBehind" #leftBehind="ngModel" pattern="^[0-9]+$" required>
+          <input type="number" pattern="[0-9]*" inputmode="numeric" class="form-control form-control-lg input-group-text" name="leftBehind" min="0"
+            [(ngModel)]="log.leftBehind" #leftBehind="ngModel" required>
         </div>
         <div class="col-sm-5">
           <button type="button" class="btn btn-success btn-number btn-lg btn-block" (click)="increaseLeftBehindValueClicked()">+</button>
